# aegisx

./: .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  SETUP_NOTES.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
ai_engine/: __init__.py  main.py
ai_engine/api/: health.py  planner.py
ai_engine/core/: config.py  planner_service.py
ai_engine/data/: aegisx.db
ai_engine/db/: database.py
ai_engine/models/: schemas.py
ai_engine/utils/: error_handler.py  logging_config.py
docs/: ARCHITECTURE.md  PRD.md  REAL_WORLD_FLOW.md  SECURITY.md  SLOs.md  VISION.md  threat-model.md
prompts/: README.md  daily_plan.txt  weekly_plan.txt
tests/: __init__.py  conftest.py  test_api.py  test_models.py
